Roughly functioning control board for wemos.

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,11 +4,16 @@
     <title><%- title %></title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <script src="http://code.jquery.com/jquery.js"></script>
   </head>
   <body>
-    <%- body %>
-    <script src="http://code.jquery.com/jquery.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <div class='container'>
+        <h1>Control Board</h1>
+        <div class='notice'></div>
+        <%- body %>
+    </div>
+    <script src="/js/bootstrap.min.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
   </body>
 </html>
