--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,5 @@
-<h1>Hello World</h1>
+<ul>
+<% for(node in nodes) { %>
+    <li><a href='/node/<%= node %>'><%= nodes[node].identifier %></a></li>
+<% } %>
+</ul>
