Changes; things now work

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,3 +3,9 @@
     <li><a href='/node/<%= node %>'><%= nodes[node].identifier %></a></li>
 <% } %>
 </ul>
+
+<script>
+$(document).on('ready', function() {
+  var socket = io.connect('/');
+}
+</script>
